<resources>
    <string name="app_name">艾瑞本草</string>
    <string name="nothing">.</string>
    <string name="time_initiating">time initiating…</string>
    <string name="qr_code">欢迎关注艾瑞本草</string>
    <string name="start">启动 / start</string>
    <string name="open">开启</string>
    <string name="cloud_connecting">服务器连接中…</string>
    <string name="device_connecting">艾灸床连接中…</string>
    <string name="cloud_connect_successful">服务端连接正常</string>
    <string name="cloud_connect_failed">服务端连接断线</string>
    <string name="local_connect_successful">艾灸机连接正常</string>
    <string name="local_connect_failed">艾灸机连接断线</string>
    <string name="copyright">CopyRight @成都艾瑞本草科技有限公司 V1.01</string>
    <string name="trans_error">通信异常</string>
    <string name="welcome">欢迎</string>
    <string name="quantifier_age">岁</string>
    <string name="start_succeed">启动成功</string>
    <string name="bed_info_id">艾灸床编号：</string>
    <string name="bed_info_type">艾灸床型号：</string>
    <string name="bed_info_specification">艾灸床规格：</string>
    <string name="bed_info_produce_time">艾灸床生产日期：</string>
    <string name="bed_info_board_id">电路板编号：</string>
    <string name="bed_info_board_version">电路板版本：</string>
    <string name="bed_info_pad_id">智能平板编号：</string>
    <string name="bed_info_pad_version">智能平板版本：</string>
    <string name="bed_info_store_id">商家编号：</string>
    <string name="bed_info_store_name">商家名称：</string>
    <string name="bed_info_store_address">商家地址：</string>
    <string name="bed_info_store_tel">商家服务电话：</string>

    <string name="account">帐号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="raw_type">艾草类型：</string>
    <string name="raw_num">艾草数量：</string>
    <string name="customer_info">用户信息：</string>
    <string name="service_type">服务类型：</string>
    <string name="heat_board">加热板：</string>
    <string name="select_all">全选</string>
    <string name="front_left">前左</string>
    <string name="front_right">前右</string>
    <string name="back_left">后左</string>
    <string name="back_right">后右</string>
    <string name="customer_phone">用户手机：</string>
    <string name="guest">散客</string>
    <string name="main_box_ctrl">艾箱控制</string>
    <string name="work_time">已工作：</string>
    <string name="back_box_ctrl">背部箱调节</string>
    <string name="heat_ctrl">加热控制</string>
    <string name="quantifier_minutes">分</string>
    <string name="quantifier_seconds">秒</string>
    <string name="temperature_fl">温度：  前左：</string>
    <string name="num_init">--</string>
    <string name="quantifier_celsius">℃</string>
    <string name="quantifier_percent">%</string>
    <string name="heat_board_work_state">加热板工作状态</string>
    <string name="ignite_board_work_state">点燃管状态</string>
    <string name="main_box_position">主箱位置：</string>
    <string name="quantifier_cm">CM</string>
    <string name="continue_and_pause">开启/暂停</string>
    <string name="welcome_to_feedback">欢迎您提出宝贵建议：</string>
    <string name="pump_ctrl">水泵控制</string>
    <string name="fan_ctrl">阀门控制</string>
    <string name="hand_in_test_report">填写测试报告</string>
    <string name="please_input_account">请输入帐号</string>
    <string name="please_input_service_id">请输入设备编号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="remember_password">记住密码</string>
    <string name="worker_login">工作人员登录</string>
    <string name="serial_number">编号</string>
    <string name="test_item">测试项</string>
    <string name="manage">操作</string>
    <string name="explain_of_breakdown">故障说明</string>
    <string name="main_box_electromotor_test">主箱电机测试</string>
    <string name="back_box_electromotor_test">背部箱电机测试</string>
    <string name="heat_board_test_fl">前左加热板测试</string>
    <string name="heat_board_test_fr">前右加热板测试</string>
    <string name="heat_board_test_bl">后左加热板测试</string>
    <string name="heat_board_test_br">后右加热板测试</string>
    <string name="raw_box_ignite_test_fl">前左艾草箱点燃测试</string>
    <string name="raw_box_ignite_test_fr">前右艾草箱点燃测试</string>
    <string name="raw_box_ignite_test_bl">后左艾草箱点燃测试</string>
    <string name="raw_box_ignite_test_br">后右艾草箱点燃测试</string>
    <string name="pump_test">水泵测试</string>
    <string name="fan_test">风扇测试</string>
    <string name="temperature_test">温度传感器测试</string>
    <string name="humidity_test">湿度传感器测试</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num10">10</string>
    <string name="num11">11</string>
    <string name="num12">12</string>
    <string name="num13">13</string>
    <string name="num14">14</string>
    <string name="num15">15</string>
    <string name="num16">16</string>
    <string name="state_good">正常</string>
    <string name="state_bad">故障</string>
    <string name="toast_quit">再按一次退出</string>
    <string name="working">正在运行</string>
    <string name="bedID">床号</string>
    <string name="up">上</string>
    <string name="down">下</string>
    <string name="store_id">店铺号</string>
    <string name="store_name">店铺名</string>
    <string name="front_up">前上</string>
    <string name="front_down">前下</string>
    <string name="back_up">后上</string>
    <string name="back_down">后下</string>
    <string name="head_box_state">头部箱状态：</string>
    <string name="tail_box_state">尾部箱状态</string>
    <string name="stop">停止</string>
    <string name="customer_set_phone">电话：</string>
    <string name="customer_set_name">姓名：</string>
    <string name="customer_set_sex">性别：</string>
    <string name="customer_set_age">年龄：</string>
    <string name="submit">提交</string>
    <string name="device_info">智能艾灸床信息</string>
    <string name="ignite_ctrl">点燃控制</string>
    <string name="pause">暂停</string>
    <string name="pay">结帐</string>
    <string name="on">开</string>
    <string name="off">关</string>
    <string name="short_stop">停</string>
    <string name="degree_body">体温</string>
    <string name="heart_rate">心率</string>
    <string name="fan_work_state">风机阀门状态</string>
    <string name="bed_temperature_front">床前温度</string>
    <string name="bed_temperature_back">床后温度</string>
    <string name="ignite_main">主</string>
    <string name="ignite_backup">备</string>
    <string name="heat_front">前</string>
    <string name="heat_back">后</string>
</resources>
