<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pic_view_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="130"
        android:background="@color/colorLightBlue">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/nothing"
            android:src="@drawable/pic_view_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/device_info"
            android:textSize="40sp"
            android:textColor="@color/colorWhite"
            tools:ignore="RelativeOverlap" />

        <ImageButton
            android:id="@+id/imageButtonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/nothing"
            android:src="@drawable/pic_button_cancel" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="570">

        <View
            android:id="@+id/center"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_centerInParent="true"
            android:background="@color/colorTransparent" />

        <ScrollView

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@id/center"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewInfoLeft"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/colorBlack" />

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/center"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="370"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewInfoRight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/colorBlack" />

            </ScrollView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="200">

                <EditText
                    android:id="@+id/editTextFeedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:gravity="top|start"
                    android:hint="@string/welcome_to_feedback"
                    android:inputType="textMultiLine"
                    android:labelFor="@id/editTextFeedback"
                    android:lines="4"
                    android:padding="5dp"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/buttonSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/editTextFeedback"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorGreen"
                    android:paddingBottom="10dp"
                    android:paddingEnd="80dp"
                    android:paddingStart="80dp"
                    android:paddingTop="10dp"
                    android:text="@string/submit"
                    android:textColor="@android:color/white"
                    android:textSize="25sp" />

            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="68"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:textSize="15sp" />
    </LinearLayout>


</LinearLayout>
