<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pic_view_background"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relativeLayoutTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/nothing"
            android:src="@drawable/pic_view_title_start" />

        <ImageButton
            android:id="@+id/imageButtonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="5dp"
            android:background="@color/colorTransparent"
            android:contentDescription="@string/nothing"
            android:src="@drawable/pic_button_cancel" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textViewCustomerInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:text="@string/guest"
        android:textColor="@color/colorWhite"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/linearLayoutPanel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="440"
        android:orientation="horizontal"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <TextView
                    android:id="@+id/textViewHeatBoardSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/heat_board"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />


                <LinearLayout
                    android:id="@+id/LinearLayoutHeatFront"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/textViewHeatBoardSwitch"
                    android:layout_below="@id/textViewHeatBoardSwitch"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageButton
                        android:id="@+id/imageButtonHeatFront"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorTransparent"
                        android:contentDescription="@string/nothing"
                        android:src="@drawable/pic_button_leftup_released" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/heat_front"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutHeatBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/LinearLayoutHeatFront"
                    android:layout_below="@id/textViewHeatBoardSwitch"
                    android:layout_marginStart="30dp"
                    android:layout_toEndOf="@id/LinearLayoutHeatFront"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageButton
                        android:id="@+id/imageButtonHeatBack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorTransparent"
                        android:contentDescription="@string/nothing"
                        android:rotation="180"
                        android:src="@drawable/pic_button_leftup_released" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/heat_back"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textViewRawBoxIgnite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/textViewHeatBoardSwitch"
                    android:layout_below="@id/textViewHeatBoardSwitch"
                    android:layout_marginTop="150dp"
                    android:text="@string/ignite"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/LinearLayoutIgniteMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/textViewRawBoxIgnite"
                    android:layout_below="@id/textViewRawBoxIgnite"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageButton
                        android:id="@+id/imageButtonIgniteMain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorTransparent"
                        android:contentDescription="@string/nothing"
                        android:src="@drawable/pic_button_leftup_released" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/ignite_main"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayoutIgniteBackup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/LinearLayoutIgniteMain"
                    android:layout_below="@id/textViewRawBoxIgnite"
                    android:layout_marginStart="30dp"
                    android:layout_toEndOf="@id/LinearLayoutIgniteMain"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageButton
                        android:id="@+id/imageButtonIgniteBackup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorTransparent"
                        android:contentDescription="@string/nothing"
                        android:rotation="180"
                        android:src="@drawable/pic_button_leftup_released" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/ignite_backup"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp" />
                </LinearLayout>

            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="100dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <TextView
                    android:id="@+id/textViewServiceType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/serve_type"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spinnerServiceType"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/textViewServiceType"
                    android:layout_alignBaseline="@id/textViewServiceType"
                    android:layout_marginStart="15dp"
                    android:background="@color/colorHalfTransparent"
                    android:padding="10dp" />


                <TextView
                    android:id="@+id/textViewRawType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewServiceType"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="50dp"
                    android:text="@string/raw_type"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spinnerRawType"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/textViewRawType"
                    android:layout_alignStart="@id/spinnerServiceType"
                    android:layout_alignBaseline="@id/textViewRawType"
                    android:background="@color/colorHalfTransparent"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/textViewRawNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewRawType"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="50dp"
                    android:text="@string/raw_num"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spinnerRawNum"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/textViewRawNum"
                    android:layout_alignBaseline="@id/textViewRawNum"
                    android:layout_alignStart="@id/spinnerServiceType"
                    android:background="@color/colorHalfTransparent"
                    android:padding="10dp" />


                <TextView
                    android:id="@+id/textViewUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewRawNum"
                    android:layout_alignStart="@id/textViewRawNum"
                    android:layout_marginTop="50dp"
                    android:text="@string/user"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editTextCustomer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/textViewUser"
                    android:layout_alignStart="@id/spinnerServiceType"
                    android:layout_alignEnd="@id/spinnerRawType"
                    android:layout_toEndOf="@id/textViewUser"
                    android:background="@color/colorHalfTransparent"
                    android:hint="@string/guest"
                    android:inputType="number"
                    android:labelFor="@id/editTextCustomer"
                    android:lines="1"
                    android:maxLines="1"
                    android:maxWidth="280dp"
                    android:padding="10dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp" />

            </RelativeLayout>

        </RelativeLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="170">

        <Button
            android:id="@+id/buttonOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/colorGreen"
            android:paddingEnd="100dp"
            android:paddingStart="100dp"
            android:text="@string/open"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:text="@string/copyright"
            android:textSize="15sp" />
    </RelativeLayout>

</LinearLayout>
