<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/pic_view_background"
    tools:context="uestc.arbc.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:padding="15dp">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/nothing"
            android:src="@drawable/pic_view_logo"/>

        <ImageButton
            android:id="@+id/imageButtonManage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/nothing"
            android:src="@drawable/pic_button_manage"
            android:background="@color/colorTransparent" />

        <TextView
            android:id="@+id/textViewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="30dp"
            android:layout_toStartOf="@id/imageButtonManage"
            android:text="@string/time_initiating"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/textViewTime"
            android:layout_alignBottom="@id/textViewTime"
            android:layout_marginEnd="15dp"
            android:src="@drawable/pic_view_calendar"
            android:contentDescription="@string/nothing"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@drawable/pic_view_subbackground_main">

        <TextView
            android:id="@+id/textViewQR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="100dp"
            android:drawableTop="@drawable/pic_view_qrcode"
            android:gravity="center"
            android:text="@string/qr_code"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:drawablePadding="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/textViewQR"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pic_view_product"
                android:contentDescription="@string/nothing"/>

            <Button
                android:id="@+id/buttonStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/start"
                android:textSize="40sp"
                android:textColor="@color/colorWhite"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingStart="80dp"
                android:paddingEnd="80dp"
                android:background="@color/colorGreen"
                android:enabled="false"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="160dp"
            android:src="@drawable/pic_view_connected"
            android:contentDescription="@string/nothing"
            android:id="@+id/imageViewCloudConnect"/>

        <TextView
            android:id="@+id/textViewCloudConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/imageViewCloudConnect"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:text="@string/connecting"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/pic_view_connected"
            android:contentDescription="@string/nothing"
            android:id="@+id/imageViewLocalConnect"/>

        <ImageButton
            android:id="@+id/imageButtonInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="70dp"
            android:src="@drawable/pic_button_info"
            android:background="@color/colorTransparent"
            android:contentDescription="@string/nothing" />

        <TextView
            android:id="@+id/textViewLocalConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/imageViewLocalConnect"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:layout_toStartOf="@id/imageButtonInfo"
            android:gravity="start"
            android:text="@string/connecting"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/textViewCopyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="@string/copyright"
            android:textSize="15sp"/>
    </RelativeLayout>

</LinearLayout>